# NightChroniclesStudio

./: .env.example  .gitignore  APPLY_PATCH.md  B_core_fixes_commit.txt  CHANGES_v3.0.md  DUPLICATE_FOLDERS_FIX.md  E2E_TEST_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MODELS_FINAL_SUMMARY.md  MODELS_UPDATE_2026.md  Nový Textový dokument.txt  POSTPROCESS_DUPLICATE_FIX.md  README.md  REMOVED_HISTORICAL_PROCESSOR.md  SENTENCE_LENGTH_UPDATE_v3.0.md  TEST_READY.md  UPGRADE_GUIDE_POSSESSIVE_FIX.md  check_preview2.py  check_project.py  claude_generator_fixes_commit.txt  commit_message.txt  narration_builder_fixes_commit.txt  nightchronicles_context.md  novy_modul.txt  oprava.txt  oprava_gui.txt  phase4_narration_tab_migration.patch  pr_description.md  pytest.ini  requirements-all-dev.txt  requirements-all.txt  requirements-dev.txt  requirements.txt  run_gui.bat  temp_check.py  temp_check2.py  temp_check3.py  test_e2e_results.json  test_e2e_workflow.py  test_path_derive.py  (+2 more)
B_core/: CHANGELOG_v2.0.md  DONE.md  FIXES_SUMMARY.md  README.md  generate_prompts.py  test_msp_parsing.py
claude_generator/: .env.example  CHANGELOG_v2.0.md  DONE.md  FIXES_SUMMARY.md  README.md  __init__.py  check_structure.py  claude_generator.py  claude_generator_simple.py  requirements.txt  run_generator.bat  runner_cli.py  test_installation.py
elevenlabs_vystup/: processing_log.json
modules/narrationbuilder/: CHANGELOG_v2.0.md  DONE.md  README.md  pyproject.toml  requirements.txt
modules/narrationbuilder/narrationbuilder/: cli.py  config.py  io.py  llm.py  logging_utils.py  prompt.py  run.py
(+103 files in other folders)
